--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:replace="fragments/header :: header">
-</head>
+<head th:replace="fragments/header :: header"></head>
+
 <body>
 <div class="container">
     <div class="mt-3">
-        <h2>Hello Spring Security</h2>
+        <h2>HTTP Status 403 - Access is denied</h2>
     </div>
     <div sec:authorize="isAuthenticated()">
         <p>已有用户登录</p>
@@ -17,6 +17,9 @@
     <div sec:authorize="isAnonymous()">
         <p>未有用户登录</p>
     </div>
+    <p>
+        拒绝访问！
+    </p>
 </div>
 <!-- /.container -->
 
